# Channel-post-bot

./: bot.py  config.py  main.py  pyproject.toml
