[tool.poetry]
name = "channel bot"
version = "0.1.0"
description = "Telegram Bot for post message to channel"
authors = ["Volodyslav D."]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
